# oracle-flexcube-copilot

./: .gitignore  Makefile  README.md  benchmark_dataset.yaml  pyproject.toml  start-ui.sh  stop-ui.sh
docs/: ARCHITECTURE.md
src/oracle_flexcube_copilot/: __init__.py  cli.py  config.py  exceptions.py  logger.py
src/oracle_flexcube_copilot/chunking/: __init__.py  interfaces.py  models.py  strategy.py
src/oracle_flexcube_copilot/embedding/: __init__.py  cache.py  engine.py  models.py
src/oracle_flexcube_copilot/enrichment/: __init__.py  classification.py  headings.py  hierarchy.py  interfaces.py  models.py  references.py  service.py  tables.py  toc.py
src/oracle_flexcube_copilot/evaluation/: __init__.py  benchmark.py  dataset.py  metrics.py  models.py  report.py
src/oracle_flexcube_copilot/indexing/: __init__.py  entity_index.py  indexer.py  models.py
src/oracle_flexcube_copilot/ingestion/: __init__.py  loader.py  metadata.py  models.py  parser.py  scanner.py  service.py
src/oracle_flexcube_copilot/llm/: __init__.py  client.py  engine.py  exceptions.py  formatter.py  generator.py  interfaces.py  models.py  stream.py
src/oracle_flexcube_copilot/prompting/: __init__.py  builder.py  formatter.py  interfaces.py  models.py  templates.py
src/oracle_flexcube_copilot/prompts/: __init__.py  builder.py
src/oracle_flexcube_copilot/retrieval/: __init__.py  bm25.py  (+3 more)
tests/: __init__.py  test_cli.py  test_placeholder.py
tests/test_chunking/: test_interfaces.py  test_models.py  test_strategy.py
tests/test_embedding/: test_cache.py  test_engine.py  test_models.py
tests/test_enrichment/: __init__.py  conftest.py  test_headings.py  test_hierarchy.py  test_interfaces.py  test_models.py  test_references.py  test_service.py  test_tables.py  test_toc.py
tests/test_evaluation/: test_metrics.py
tests/test_indexing/: test_entity_index.py  test_indexer.py
tests/test_ingestion/: __init__.py  conftest.py  test_loader.py  test_metadata.py  test_parser.py  test_scanner.py  test_service.py
tests/test_llm/: __init__.py  test_cli.py  test_client.py  test_engine.py  test_exceptions.py  test_formatter.py  test_generator.py  test_models.py  test_stream.py
tests/test_prompting/: test_builder.py  test_formatter.py  test_models.py  test_templates.py
tests/test_prompts/: __init__.py  test_builder.py
tests/test_retrieval/: __init__.py  test_bm25.py  test_engine.py  test_fusion.py
(+2 files in other folders)
